<resources>

    <string name="app_name">Kidography</string>
    <string name="sub_app_name">Kids go geography</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="tips_and_tricks_title">Game Hints!</string>
    <string name="game_over">Game Over</string>
    <string name="start_game">Start</string>
    <string name="whats_next">What\'s next?</string>
    <string name="correct_placeholder">Correct: 0</string>
    <string name="wrong_placeholder">Wrong: 0</string>
    <string name="score_placeholder">Score: 0</string>
    <string name="new_game">New Game</string>
    <string name="main_menu">Menu</string>
    <string name="settings_label">Settings</string>
    <string name="about">About</string>
    <string name="bg_music">Music</string>
    <string name="sounds">Sounds</string>
    <string name="animations">Animations</string>
    <string name="show_tips">Show Tips</string>
    <string name="game_timing_init">60 seconds</string>
    <string name="game_time">Game Time</string>
    <string name="pause">Pause</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="ok">OK</string>
    <string name="cool">Cool!</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="resume">Resume</string>
    <string name="correct">Correct: </string>
    <string name="wrong">Wrong</string>
    <string name="score">Score: </string>
    <string name="oh_come_on">Oh come on!</string>
    
    <string name="riddle_question_label">Guess the Riddle</string>
    <string name="capital_question_label">Do you know?</string>
    <string name="landmarks_question_label">Landmarks question!</string>
    <string name="flags_question_label">Whose flag is this?</string>
    
    <string name="twelve_game_type">12 questions</string>
    <string name="time_limit_game_type">Time limited</string>
    
    <string name="first_category_name">Riddles</string>
    <string name="second_category_name">Capitals</string>
    <string name="third_category_name">Flags</string>
    <string name="fourth_category_name">Landmarks</string>
    
    <string name="highscores">Scores</string>
    <string name="highscores_title">Top 5 players</string>
    <string name="no_scores">(no scores)</string>

    <!-- Content Descriptors -->
    <string name="rays_content_desc">Rays decorator</string>
    <string name="grass_content_desc">Grass decorator</string>
    <string name="highscores_desc">Highscores button</string>
    <string name="about_desc">About button</string>
    <string name="flag_image_desc">Flag Image</string>
    <string name="game_type_desc">Select type of game</string>
    <string name="name_tree_desc">Name tree</string>
    
    <string name="whats_your_name">What\'s your name?</string>
    <string name="name_hint">your name</string>
    
    <string name="exit_game_title">Quit? Really?</string>
    <string name="exit_message">Do you really want to quit just like that?</string>
    
    <string name="questionTitleDesc">Question header</string>
    
    <string name="exit_label">Exit</string>
    <string name="exit_msg_label">Exit Message</string>
    
    <string name="share">Share!</string>
    <string formatted="false" name="share_text">I guessed %d questions about %s and gained %d points in Kidography for Android!\n\nCan you do better?</string>
    <string name="share_title">My Kidography score!</string>
    
    <string name="app_url">https://play.google.com/store/apps/details?id=com.twodwarfs.wishmeawish</string>
    
</resources>