<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@null"
    android:paddingBottom="@dimen/exit_layout_padding_top_and_bottom"
    android:paddingTop="@dimen/exit_layout_padding_top_and_bottom" >

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/settings_main_layout_buttons_top_margin"
        android:background="@drawable/dialog_bg"
        android:paddingBottom="10dp"
        android:gravity="bottom|center"
        android:visibility="visible" >

        <Button
            android:id="@+id/button_yes"
            style="@style/dialogButtonStyle"
            android:text="@string/yes" />

        <Button
            android:id="@+id/button_no"
            style="@style/dialogButtonStyle"
            android:text="@string/no" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView_exit_title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/settings_title_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/settings_title_top_margin"
        android:contentDescription="@string/exit_label"
        android:scaleType="fitCenter"
        android:src="@drawable/quit_title"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/imageView_exit_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/exit_msg_label"
        android:paddingLeft="10dp"
        android:paddingTop="30dp"
        android:scaleType="fitCenter"
        android:src="@drawable/quit_message"
        android:visibility="visible" />

</RelativeLayout>