<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@null"
    android:paddingBottom="@dimen/pause_layout_padding_top_and_bottom"
    android:paddingTop="@dimen/pause_layout_padding_top_and_bottom" >

    <ImageView
        android:id="@+id/imageView_resume_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/exit_msg_label"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:scaleType="fitCenter"
        android:src="@drawable/pause_content"
        android:visibility="visible" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/settings_main_layout_buttons_top_margin"
        android:background="@null"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/layout_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            android:paddingBottom="50dp" >

            <Button
                android:id="@+id/button_resume"
                style="@style/dialogButtonStyle"
                android:text="@string/resume" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView_resume_title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/settings_title_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/settings_title_top_margin"
        android:contentDescription="@string/exit_label"
        android:scaleType="fitCenter"
        android:src="@drawable/pause_title"
        android:visibility="gone" />

</RelativeLayout>