<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@null"
    android:paddingBottom="@dimen/about_layout_padding_top_and_bottom"
    android:paddingTop="@dimen/about_layout_padding_top_and_bottom" >

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/settings_main_layout_buttons_top_margin"
        android:background="@drawable/dialog_bg"
        android:gravity="bottom|center"
        android:paddingBottom="10dp"
        android:visibility="visible" >

        <Button
            android:id="@+id/button_ok"
            style="@style/dialogButtonStyle"
            android:text="@string/ok" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView_tip_title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/settings_title_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/settings_title_top_margin"
        android:contentDescription="@string/exit_label"
        android:scaleType="fitCenter"
        android:src="@drawable/capital_header"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView_tip_title"
        android:paddingLeft="@dimen/tip_padding"
        android:paddingRight="@dimen/tip_padding"
        android:layout_marginTop="@dimen/tip_top_margin"
        android:textColor="@android:color/black"
        android:text="Did you know that there are two major cities located on two continents? Istanbul in Turkey and Yekaterinburg in Russia!\n\nNice, now you know!"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkBox_show_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_tip"
        android:layout_marginLeft="@dimen/tips_checkbox_left_margin"
        android:layout_marginTop="@dimen/tips_checkbox_top_margin"
        android:text="@string/do_not_show_again"
        android:textColor="@android:color/black" />

</RelativeLayout>