<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_progressbar_timing"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/game_info_bottom_margin"
    android:layout_marginLeft="@dimen/game_info_left_margin"
    android:layout_marginRight="@dimen/game_info_right_margin"
    android:layout_marginTop="@dimen/game_info_top_margin"
    android:background="@null"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:shadowColor="@color/game_info_labels_shadow"
        android:shadowDx="0"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/score_placeholder"
        android:textColor="@color/game_info_labels_color"
        android:textSize="@dimen/game_info_score_text_size" />

    <ProgressBar
        android:id="@+id/progressBar_timing"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@+id/textView_score"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:max="120"
        android:progress="120"
        android:progressDrawable="@drawable/time_progressbar_bg" />

    <ImageButton
        android:id="@+id/button_pause"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_above="@+id/progressBar_timing"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:background="@null"
        android:onClick="onButtonClick"
        android:scaleType="fitXY"
        android:src="@drawable/pause_button_selector"
        android:text="@string/pause"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_score_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:shadowColor="@color/game_info_labels_shadow"
        android:shadowDx="0"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@android:id/empty"
        android:textColor="@color/point_info_color"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/imageView_question_title"
        android:layout_width="@dimen/question_title_width"
        android:layout_height="@dimen/question_title_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/question_title_top_margin"
        android:contentDescription="@string/questionTitleDesc"
        android:scaleType="fitCenter" />

</RelativeLayout>